Made small changes.